--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,9 @@ timm==0.4.12
 transformers>=4.25.1
 fairscale==0.4.4
 pycocoevalcap
-torch
-torchvision
+torch>=2.0.0
+torchvision>=0.15.0
 Pillow
 scipy
+numpy>=2.0.0
 clip @ git+https://github.com/openai/CLIP.git
