--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,8 @@ timm==0.4.12
 transformers>=4.25.1
 fairscale==0.4.4
 pycocoevalcap
-torch
-torchvision
+torch>=2.3.0
+torchvision>=0.18.0
 Pillow
 scipy
 numpy>=2.0.0
